# Hackaton2026

./: .gitignore  .~lock.r17_debug.xlsx#  README.md  dashboard.py  main.py  pyproject.toml  r10_debug.xlsx  r12_debug.xlsx  r17_debug.xlsx
data/: inputs.csv  output_all_rules.csv
docs/: .~lock.3.INPUT&OUTPUT_FILES_specification.xlsx#  .~lock.4. HACKATHON_FRAML_RULES.xlsx#  3.INPUT&OUTPUT_FILES_specification.xlsx  4. HACKATHON_FRAML_RULES.xlsx  FintechHACKATHON2026_presentation.pptx
rules/: RuleBase.py  RuleDescriptor.py  __init__.py  r1.py  r10.py  r12.py  r17.py  r18.py  r2.py  r22.py  r24.py  r3.py  r6.py  r7.py  r8.py
tests/: test_Normalizer.py  test_r10.py  test_r17.py  test_r18.py  test_r22.py  test_r24.py  test_r8.py
utils/: Normalizer.py
